# k8sss

./: Cargo.toml  Earthfile  LICENSE  README.md  gitversion.yml  index.yaml
.github/workflows/: release-help.yml  release.yml
charts/k8sss/: Chart.yaml  values.yaml
charts/k8sss/templates/: _helper.tpl
charts/test/: Chart.yaml
charts/test/templates/: deployment.yaml
src/: cli.rs  kube.rs  main.rs
