[package]
name = "k8sss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.26"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
tracing-futures = { version = "0.2.5", features = ["futures-03"]}
tracing-opentelemetry = "0.18.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"] }
anyhow = "1"
tokio = { version = "1" , features = ["full"] }
clap = { version = "4", features = ["derive", "help", "usage", "error-context", "wrap_help"] }
kube = { version = "0.78.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
